Prevent horizontal scrolling when block is aligned full or wide

--- a/src/editor/scaffolding/index.css
+++ b/src/editor/scaffolding/index.css
@@ -17,6 +17,17 @@
 	}
 }
 
+.interface-interface-skeleton {
+
+	&__content {
+		overflow-x: hidden;
+	}
+
+	&__editor {
+		max-width: 100%;
+	}
+}
+
 /**
  * Elements
  */
